# recuritment-ai

./: .gitignore  README.md  dis.json  docker-compose.yml  outbound_dispatch.json  outbound_trunk.json  trun.json
agent/: README.md  dashboard.py  kb.py  lang_agent.py  pyproject.toml  receive-api.py
agent/src/: agent_n.py  agent_n.py-bkp  agent_n1.py  evaluate.py  lang_test.py
config/: livekit-minimal.yaml  livekit.yaml  sip-minimal.yaml  sip.yaml  sip.yaml-bkp  sip1.yaml
data/redis/: dump.rdb
data/redis/appendonlydir/: appendonly.aof.1.base.rdb
other/: greet-agi-load.php
recruitment_dashboard/: manage.py
recruitment_dashboard/recruitment_core/: asgi.py  settings.py  urls.py  wsgi.py
