[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "dotenv>=0.9.9",
    "ipython>=8.38.0",
    "langchain-openai>=1.1.7",
    "livekit-agents[cartesia,deepgram,openai,silero]~=1.3",
    "motor>=3.7.1",
    "redis>=7.1.0",
]
